# ndarray-simd-test

./: Cargo.toml  README.md
ndarray-simd/: Cargo.toml
ndarray-simd/src/: lib.rs  multiply.rs
ndarray-sprrowlii/: Cargo.toml  ndarray.d
ndarray-sprrowlii/src/: impl_ops.rs
src/: main.rs
