[package]
name = "ndarray-simd-test"
version = "0.1.0"
authors = ["SparrowLii <liyuan179@huawei.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { path = "./ndarray-sprrowlii", features = ["simd"] }
ndarray-rand = { path = "./ndarray-sprrowlii/ndarray-rand"}